# NutriPlan

./: .gitignore
.github/workflows/: backend-lint.yml  backend-tests.yml  backend.yml  lint-backend.yml
Documentos/: Cronograma_NutriPlanv2.docx  Participación en Reunión Informativa del Evento Hackathon 2025_29 Julio_2025.docx
api-tests/NutriPlan/: Google Sign-In.bru  Login.bru  Me.bru  Rate.bru  bruno.json  https---nightly-api.nutri-plan.net-.bru
backend/: .gitignore  README.md  index.js  output.txt  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
backend/docs/: api.md  backend-guia-local.md  frontend-guia-local.md  mega-docs.md
backend/src/: manage.py
backend/src/backend/: __init__.py  asgi.py  custom_router.py  settings.py  urls.py  wsgi.py
backend/src/backend/middleware/: __init__.py  custom_exception_handler.py  exception_handler.py
backend/src/nutriplan/: __init__.py  admin.py  apps.py  asgi.py  auth.py  models.py  settings.py  urls.py  wsgi.py
backend/src/nutriplan/admin/: __init__.py  article.py  category.py  chat.py  collection.py  dietary.py  ingredient.py  mixins.py  recipe.py  review.py  social.py  user.py
backend/src/nutriplan/management/: __init__.py
backend/src/nutriplan/management/commands/: __init__.py  populate.py
backend/src/nutriplan/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py  0002_create_categories.py  0002_enable_ci_collation.py  0002_image_recipeimage_alter_ingredient_options_and_more.py  0002_recipecollection_collectionitem_and_more.py  0002_socialaccount.py  0003_enable_ci_collation.py  0003_enable_pg_trgm.py  0003_review.py  0004_enable_pg_trgm.py  0004_enable_search_exts.py  0004_recipe_categories.py  0005_backfill_categories.py  0005_enable_search_exts.py  0006_remove_recipe_nutriplan_r_categor_4a1269_idx_and_more.py  0007_recipe_instructions.py  0008_ingredient_uniq_ing_name.py  0009_chatthread_chatmessage_and_more.py  0010_article_articlerecipe_article_recipes_and_more.py
backend/src/nutriplan/models/: __init__.py  article.py  base_model.py  category.py  chat.py  collection.py  ingredient.py  recipe.py  review.py  social.py  user.py
backend/src/nutriplan/serializers/: __init__.py  article.py  category.py  chat.py  collection.py  ingredient.py  recipe.py  review.py  user.py
backend/src/nutriplan/services/: __init__.py  article.py  recipe.py  recipe_service.py  user.py  user_service.py
backend/src/nutriplan/services/auth/: __init__.py  google.py  google_oauth.py
backend/src/nutriplan/services/llm/: __init__.py  gemini.py  generators.py  prompts.py  schemas.py  seeders.py  utils.py
backend/src/nutriplan/services/llm/chefcito/: __init__.py  agent.py  context.py  contracts.py  prompt.py  tools.py  utils.py
backend/src/nutriplan/services/llm/populate/: __init__.py  generators.py
backend/src/nutriplan/tests/: conftest.py  factories.py  test_articles.py  test_auth.py  test_chefcito.py  test_collections.py  test_cookies.py  test_models.py  test_recipes.py  test_recommendations.py  test_reviews.py  test_serializers.py  test_services.py  test_users.py
backend/src/nutriplan/views/: __init__.py  articles.py  auth.py  categories.py  chat.py  chefcito.py  collections.py  ingredients.py  recipes.py  reviews.py  user.py  users.py
backend/src/nutriplan/views/auth/: __init__.py  cookies.py  google.py  login.py  logout.py  register.py  utils.py
backend/src/nutriplan/views/permissions/: __init__.py  articles.py  chat.py  collections.py  ownership.py  reviews.py  users.py
docs/: justificacion-transporte.xlsx  propuesta.docx
docs/cronogramas/: cronograma-nuevo.docx  cronograma-v3.docx
docs/excel/: licencias-agosto.xlsx
frontend/: dockerfile  package-lock.json  package.json  svelte.config.js
frontend/NutriPlan-frontend/: package-lock.json  package.json
frontend/NutriPlan-frontend/src/routes/: +layout.svelte  +page.svelte
frontend/NutriPlan-frontend/static/styles/: global.css  home.css  main.css
frontend/src/lib/: cookies.js  endpoints.js
frontend/src/lib/classes/: receta.js
frontend/src/lib/components/: ArticleCard.svelte  ArticleForm.svelte  Banner.svelte  ChatInput.svelte  ChatMessage.svelte  Checkbox.svelte  CollectionCard.svelte  Footer.svelte  HeartBox.svelte  RecipeCard.svelte  RotatingNutriplan.svelte  SearchBox.svelte  StarRating.svelte  search.ts
frontend/src/lib/stores/: auth.js  formAnswers.js  recipes.js
frontend/src/lib/utils/: date.js  fetch.js  images.js  math.js  permissions.js  recipes.js
frontend/src/routes/: +error.svelte  +layout.server.js  +layout.svelte  +page.svelte
frontend/src/routes/acerca/: +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/ai-helper/: +page.svelte
frontend/src/routes/api/access/: +server.js
frontend/src/routes/articulos/: +page.svelte
frontend/src/routes/chef-ia/: +page.svelte
frontend/src/routes/helloworld/: +page.svelte
frontend/src/routes/home-page/: +page.svelte
frontend/src/routes/identity/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/perfil/: +page.svelte
frontend/src/routes/planes/: +page.svelte
frontend/src/routes/planificador-ia/: +page.svelte
frontend/src/routes/receta-rapida/: +page.svelte
frontend/src/routes/recetas/: +page.svelte
frontend/src/routes/signup/: +page.server.js  +page.svelte
frontend/src/routes/welcome/: +page.svelte
frontend/static/styles/: global.css  home.css  responsive.css
(+24 files in other folders)
