[project]
    dependencies = [
        "dj-database-url>=3.0.1",
        "django-cors-headers>=4.9.0",
        "django>=5.2.5",
        "djangorestframework-simplejwt>=5.5.1",
        "djangorestframework>=3.16.1",
        "google-genai>=1.38.0",
        "gunicorn>=23.0.0",
        "psycopg[binary]>=3.2.10",
        "python-dotenv>=1.1.1",
        "whitenoise>=6.11.0",
    ]
    name = "nutriplan-backend"
    requires-python = ">=3.13"
    version = "0.4"

[dependency-groups]
    dev = [
        "ruff>=0.12.12",
    ]

[tool.ruff.lint]
    ignore = [
        "COM812",
        "D200",
        "D202",
        "D203",
        "D212",
        "D401",
    ]
    select = ["ALL"]

    [tool.ruff.lint.isort]
        case-sensitive             = true
        combine-as-imports         = true
        force-sort-within-sections = true
        order-by-type              = true
        relative-imports-order     = "closest-to-furthest"
        split-on-trailing-comma    = false

    [tool.ruff.lint.per-file-ignores]
        "**/migrations/**.py" = ["D100", "D101", "D104", "E501", "RUF012"]
        "**/prompts.py"       = ["E501"]
        "**/settings.py"      = ["E501"]
